@@ -155,4 +155,8 @@ seq.default <-
 }
 
 ## In reverence to the very first versions of R which already had sequence():
-sequence <- function(nvec) unlist(lapply(nvec, seq_len))
+sequence <- function(nvec, ...) UseMethod("sequence")
+
+sequence.default <- function(nvec, from = 1L, by = 1L, ...) {
+    .Internal(sequence(as.integer(nvec), as.integer(from), as.integer(by)))
+}
